--- a/views/widget/header.ejs
+++ b/views/widget/header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-<div class="main-header">
+<div class="main-header"  ng-controller="HeadCtrl">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 logo-holder text-center">
@@ -44,7 +44,7 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
 </a>
-<div class="navbar-right"   ng-controller="DropdownCtrl">
+<div class="navbar-right">
 <ul class="nav navbar-nav">
 <!-- Messages: style can be found in dropdown.less-->
 <li class="dropdown messages-menu" dropdown on-toggle="toggled(open)">
