--- a/views/widget/upload-step2.ejs
+++ b/views/widget/upload-step2.ejs
@@ -3,19 +3,19 @@
     <!-- Left col -->
     <section class="col-lg-12 connectedSortable">
         <!-- Box (with bar chart) -->
-        <div class="box box-info" id="loading-example" ng-controller="PhoneListCtrl">
+        <div class="box box-info" id="loading-example" ng-controller="UploadStep2Ctrl">
             <form role="form">
-                <div class="box-body xfile-upload-step2" ngf-drop ng-model="files"
+                <div class="box-body xfile-upload-step2" ngf-drop
                      ngf-drag-over-class="dragover" ngf-multiple="true" ngf-allow-dir="true"
                      ngf-accept="'image/*,application/pdf'">
-                        <div class="row">
+                        <div class="row" ng-repeat="file in files">
                             <div class="col-sm-1">
-                                <!-- blank -->
+                                <span class="label label-info">{{$index+1}}</span>
                             </div>
                             <div class="col-sm-5">
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">标题</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                                    <input type="email" class="form-control" id="exampleInputEmail1" ng-value="file.name" readonly="readonly">
                                 </div>
                                 <div class="form-group">
                                     <label>简介</label>
@@ -63,7 +63,7 @@
                             <div class="col-sm-1">
                                 <!-- blank -->
                             </div>
-                        </div><!-- /.xfile-upload -->
+                        </div><!-- row -->
                 </div><!-- /.box-body -->
             </form>
         </div><!-- /.box -->
