--- a/views/widget/header.ejs
+++ b/views/widget/header.ejs
@@ -1,12 +1,12 @@
-<header class="header">
-<div class="main-header"  ng-controller="HeadCtrl">
+<header class="header"  ng-controller="HeadCtrl">
+<div class="main-header" >
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 logo-holder text-center">
                 <a href="#/index">
                     <h1 class="xlogo">xFile</h1>
                     <div class="logo-subtitle">
-                        <span>share idea{{"angular"}}</span>
+                        <span>share idea</span>
                     </div><!-- /.logo-subtitle -->
                 </a>
             </div>
