--- a/views/widget/upload-step2.ejs
+++ b/views/widget/upload-step2.ejs
@@ -1,72 +1,96 @@
 <!-- Main row -->
-<div class="row">
+<div class="row" ng-controller="UploadStep2Ctrl">
     <!-- Left col -->
     <section class="col-lg-12 connectedSortable">
         <!-- Box (with bar chart) -->
-        <div class="box box-info" id="loading-example" ng-controller="UploadStep2Ctrl">
-            <form role="form">
-                <div class="box-body xfile-upload-step2" ngf-drop
-                     ngf-drag-over-class="dragover" ngf-multiple="true" ngf-allow-dir="true"
-                     ngf-accept="'image/*,application/pdf'">
-                        <div class="row" ng-repeat="file in files">
-                            <div class="col-sm-1">
-                                <span class="label label-info">{{$index+1}}</span>
-                            </div>
-                            <div class="col-sm-5">
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1">标题</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" ng-value="file.name" readonly="readonly">
-                                </div>
-                                <div class="form-group">
-                                    <label>简介</label>
-                                    <textarea class="form-control" rows="4" placeholder="Enter ..."></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label>分类</label>
-                                    <select class="form-control">
-                                        <option>option 1</option>
-                                        <option>option 2</option>
-                                        <option>option 3</option>
-                                        <option>option 4</option>
-                                        <option>option 5</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1">标签</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+        <form role="form">
+        <div class="box box-info" id="loading-example"   ngf-drop
+             ngf-drag-over-class="dragover" ngf-multiple="true" ngf-allow-dir="true"
+             ngf-accept="'image/*,application/pdf'">
+                <div class="box-header">
+                    <h3 class="box-title">
+                        <i class="fa  fa-check-square-o"></i> {{files.length}}篇文档准备上传！<small>请填写文档信息后点击“完成上传”</small>
+                    </h3>
+                    <div class="box-tools pull-right">
+                        <button class="btn btn-default" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-plus-square"></i> 批量填写</button>
+                        <button class="btn btn-default" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-plus-square"></i> 继续添加</button>
+                        <button class="btn btn-success" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa  fa-upload"></i> 完成上传</button>
+                    </div>
+                </div><!-- /.box-header -->
+                <div class="box-body xfile-upload-step2">
+                    <div class="box-group" id="accordion" accordion>
+                        <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
+                        <div class="panel box" ng-repeat="file in files" accordion-group>
+                            <div class="box-header" accordion-heading>
+                                <h4 class="box-title">
+                                    <a data-toggle="collapse">
+                                        <span class="label label-info">{{$index+1}}</span> {{file.name}}
+                                    </a>
+                                    <i class="fa fa-edit"></i>
+                                </h4>
+                                <div class="box-tools pull-right">
+                                    <button class="btn btn-default btn-sm" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
+                                    <button class="btn btn-default btn-sm" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
                                 </div>
                             </div>
-                            <div class="col-sm-5">
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1">标题</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                                </div>
-                                <div class="form-group">
-                                    <label>简介</label>
-                                    <textarea class="form-control" rows="4" placeholder="Enter ..."></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label>分类</label>
-                                    <select class="form-control">
-                                        <option>option 1</option>
-                                        <option>option 2</option>
-                                        <option>option 3</option>
-                                        <option>option 4</option>
-                                        <option>option 5</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1">标签</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                            <div class="box-body panel-collapse collapse in ">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label>简介</label>
+                                            <textarea class="form-control" rows="4" placeholder="填写简介，能使文档更容易搜索"></textarea>
+                                        </div>
+                                        <div class="form-group">
+                                            <label>分类</label>
+                                            <select class="form-control">
+                                                <option>option 1</option>
+                                                <option>option 2</option>
+                                                <option>option 3</option>
+                                                <option>option 4</option>
+                                                <option>option 5</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="exampleInputEmail1">标签</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="多标签请用逗号隔开">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label>类型</label>
+                                            <div class="radio">
+                                                <label>
+                                                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                                                    普通文档
+                                                </label>
+                                                <small>任何人可以检索和阅读</small>
+                                            </div>
+                                            <div class="radio">
+                                                <label>
+                                                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                                                    私有文档
+                                                </label>
+                                                <small>仅自己可见</small>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label>保存至</label>
+                                            <select class="form-control">
+                                                <option>option 1</option>
+                                                <option>option 2</option>
+                                                <option>option 3</option>
+                                                <option>option 4</option>
+                                                <option>option 5</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-sm-1">
-                                <!-- blank -->
-                            </div>
-                        </div><!-- row -->
+                        </div>
+                    </div>
                 </div><!-- /.box-body -->
-            </form>
-        </div><!-- /.box -->
+            </div><!-- /.box -->
+        </form>
     </section><!-- /.Left col -->
     <!-- right col (We are only adding the ID to make the widgets sortable)-->
 </div><!-- /.row (main row) -->
